--- a/ems/index.html
+++ b/ems/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ✅ Title & Description -->
-    <title>TaskFlow - Team Task Management Dashboard</title>
+    <title>EMS - Employee Management System</title>
     <meta
       name="description"
-      content="TaskFlow is a powerful task management dashboard for teams to manage tasks, track progress, and boost productivity."
+      content="EMS (Employee Management System) is a modern dashboard to manage employees, assign tasks, track productivity, and streamline team collaboration."
     />
     <meta
       name="keywords"
-      content="task management, team collaboration, productivity, dashboard, project tracking, TaskFlow"
+      content="Employee Management System, EMS, task management, team dashboard, employee tracking, HR tool"
     />
     <meta name="author" content="Abdul Haseeb" />
     <meta name="robots" content="index, follow" />
@@ -20,11 +20,11 @@
     <!-- ✅ Favicon -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
-    <!-- ✅ Open Graph (Facebook, LinkedIn, etc.) -->
-    <meta property="og:title" content="TaskFlow - Team Task Management" />
+    <!-- ✅ Open Graph (for Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="EMS - Employee Management System" />
     <meta
       property="og:description"
-      content="Easily assign tasks, track performance, and manage your team with TaskFlow."
+      content="A complete Employee Management System to assign tasks, track performance, and manage teams efficiently."
     />
     <meta property="og:image" content="/og-preview.jpg" />
     <meta property="og:url" content="https://yourdomain.com/" />
@@ -32,10 +32,10 @@
 
     <!-- ✅ Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="TaskFlow - Team Task Management" />
+    <meta name="twitter:title" content="EMS - Employee Management System" />
     <meta
       name="twitter:description"
-      content="Manage your team's tasks and performance with ease using TaskFlow."
+      content="Streamline task assignment, performance tracking, and employee coordination with EMS."
     />
     <meta name="twitter:image" content="/og-preview.jpg" />
 
