--- a/ems/index.html
+++ b/ems/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="5N2FHirS5umQ5Rt3hCQBpxiZD67DslQzD-TZwd1M7K4" />
 
     <!-- ✅ Title & Description -->
     <title>EMS - Employee Management System</title>
@@ -27,7 +28,7 @@
       content="A complete Employee Management System to assign tasks, track performance, and manage teams efficiently."
     />
     <meta property="og:image" content="/og-preview.jpg" />
-    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:url" content="https://ems-orcin-pi.vercel.app/" />
     <meta property="og:type" content="website" />
 
     <!-- ✅ Twitter Card -->
